--- a/index.html
+++ b/index.html
@@ -863,7 +863,15 @@ function renderEquityCurve(points) {
 }
 
 /* ═══════════════════════════════════════════════════════════════════════════
-   MULTI-LINE PNL — Parse bucket-level cumulative PnL and render overlay
+   MULTI-LINE PNL — Compute bucket-level cumulative PnL from the bets CSV
+   ═══════════════════════════════════════════════════════════════════════════
+   
+   BULLETPROOF: Computes everything from the bets CSV (same source as
+   equity curve) using result + odds + wager + bucket columns. No longer
+   depends on a separate pre-computed multi-line sheet that can go stale.
+   
+   Also supports legacy mode: if equityText is unavailable, falls back
+   to the old MULTILINE_CSV_URL parsed sheet.
    ═══════════════════════════════════════════════════════════════════════════ */
 const ML_COLORS = [
   "#2dd4a0","#5b9cf5","#f09c5b","#f4718a","#a78bfa",
@@ -872,27 +880,146 @@ const ML_COLORS = [
   "#fbbf24","#a3e635","#e879f9","#67e8f9","#fca5a5"
 ];
 
+function computeMultiLineFromBets(csvText) {
+  const parsed = Papa.parse(csvText, { header: false, skipEmptyLines: true, dynamicTyping: false });
+  const rows = parsed.data;
+  if (!rows || rows.length < 2) throw new Error("Bets CSV appears empty for multi-line.");
+
+  /* Find header row */
+  let hIdx = -1;
+  for (let i = 0; i < Math.min(rows.length, 30); i++) {
+    const lower = rows[i].map(c => (c || "").trim().toLowerCase());
+    if (lower.some(h => h === "date" || h === "dates")) { hIdx = i; break; }
+  }
+  if (hIdx < 0) throw new Error("Multi-line: no header row with 'Date'.");
+
+  const hdr = rows[hIdx].map(c => (c || "").trim().toLowerCase());
+  const iDate   = hdr.findIndex(h => h === "date" || h === "dates");
+  const iResult = hdr.findIndex(h => h === "result");
+  const iOdds   = hdr.findIndex(h => h === "odds");
+  const iWager  = hdr.findIndex(h => h === "wager");
+  const iBucket = hdr.findIndex(h => h === "bucket");
+  /* Also check for "tier" as fallback bucket grouping */
+  const iTier   = hdr.findIndex(h => h === "tier");
+
+  if (iResult < 0 || iOdds < 0 || iWager < 0) {
+    throw new Error("Multi-line: missing required columns (result/odds/wager). Headers: " + hdr.join(", "));
+  }
+
+  /* Use bucket column if available, otherwise tier */
+  const iBucketCol = iBucket >= 0 ? iBucket : iTier;
+  if (iBucketCol < 0) {
+    throw new Error("Multi-line: no 'bucket' or 'tier' column found. Headers: " + hdr.join(", "));
+  }
+
+  function parseCell(val) {
+    let v = (val || "").trim();
+    if (!v) return NaN;
+    v = v.replace(/[$,]/g, "").replace(/^\((.+)\)$/, "-$1");
+    return parseFloat(v);
+  }
+
+  /* ── Pass 1: collect all bets with bucket, date, computed profit ── */
+  const bets = [];
+  for (let r = hIdx + 1; r < rows.length; r++) {
+    const row = rows[r];
+    if (!row || row.length <= iDate) continue;
+
+    const dateStr = (row[iDate] || "").trim();
+    if (!dateStr) continue;
+
+    const result = (row[iResult] || "").trim().toUpperCase();
+    if (result !== "W" && result !== "L") continue;
+
+    const odds  = parseCell(row[iOdds]);
+    const wager = parseCell(row[iWager]);
+    if (isNaN(odds) || isNaN(wager) || wager <= 0) continue;
+
+    let bucket = (row[iBucketCol] || "").trim();
+    if (!bucket) bucket = "Other";
+
+    /* Parse date */
+    let d;
+    if (/^\d{4}-\d{2}-\d{2}/.test(dateStr)) {
+      d = new Date(dateStr.split(" ")[0] + "T12:00:00");
+    } else if (/^\d{1,2}\/\d{1,2}\/\d{2,4}/.test(dateStr)) {
+      const parts = dateStr.split("/");
+      const y = parts[2] && parts[2].length <= 2 ? 2000 + parseInt(parts[2]) : parseInt(parts[2]);
+      d = new Date(y, parseInt(parts[0]) - 1, parseInt(parts[1]));
+    } else {
+      d = new Date(dateStr);
+    }
+    if (!d || isNaN(d.getTime())) continue;
+
+    /* Compute profit */
+    let profit;
+    if (result === "W") {
+      profit = odds > 0 ? wager * (odds / 100) : wager * (100 / Math.abs(odds));
+    } else {
+      profit = -wager;
+    }
+
+    bets.push({ date: d, dateKey: d.toISOString().split("T")[0], bucket, profit });
+  }
+
+  if (bets.length === 0) throw new Error("Multi-line: 0 valid bets found.");
+
+  /* Sort by date */
+  bets.sort((a, b) => a.date - b.date);
+
+  /* ── Pass 2: build unique ordered date labels ────────────────────── */
+  const dateKeys = [...new Set(bets.map(b => b.dateKey))];
+  const dateLabels = dateKeys.map(dk => {
+    const d = new Date(dk + "T12:00:00");
+    return d.toLocaleDateString("en-US", { month: "short", day: "numeric" });
+  });
+
+  /* ── Pass 3: get all bucket names ────────────────────────────────── */
+  const bucketSet = new Set(bets.map(b => b.bucket));
+  const bucketNames = [...bucketSet].sort();
+
+  /* ── Pass 4: compute cumulative PnL per bucket per date ──────────── */
+  const cumByBucket = {};
+  bucketNames.forEach(b => { cumByBucket[b] = 0; });
+
+  const series = {};
+  bucketNames.forEach(b => { series[b] = []; });
+
+  for (const dk of dateKeys) {
+    /* Sum all profits for each bucket on this date */
+    const dayBets = bets.filter(b => b.dateKey === dk);
+    for (const bet of dayBets) {
+      cumByBucket[bet.bucket] += bet.profit;
+    }
+    /* Record cumulative value for each bucket */
+    bucketNames.forEach(b => {
+      series[b].push(Math.round(cumByBucket[b]));
+    });
+  }
+
+  console.log("Multi-line (self-computed): " + dateKeys.length + " dates, " + bucketNames.length + " buckets, " + bets.length + " bets");
+  return { dates: dateLabels, bucketNames, series };
+}
+
+/* Legacy fallback: parse pre-computed multi-line CSV */
 function parseMultiLineCSV(csvText) {
   const parsed = Papa.parse(csvText, { header: false, skipEmptyLines: true, dynamicTyping: false });
   const rows = parsed.data;
   if (!rows || rows.length < 2) throw new Error("Multi-line CSV appears empty.");
 
-  /* Find header row — first row that has "date" in column 0 or 1 */
   let hIdx = -1;
   for (let i = 0; i < Math.min(rows.length, 15); i++) {
     const first = (rows[i][0] || "").trim().toLowerCase();
     if (first === "date" || first === "dates" || first === "day") { hIdx = i; break; }
   }
-  if (hIdx < 0) throw new Error("Multi-line CSV: no header row starting with 'Date'. Row 0: " + (rows[0] || []).slice(0, 5).join(", "));
+  if (hIdx < 0) throw new Error("Multi-line CSV: no header row starting with 'Date'.");
 
   const hdr = rows[hIdx].map(c => (c || "").trim());
   const bucketNames = hdr.slice(1).filter(h => h.length > 0);
+  if (bucketNames.length === 0) throw new Error("Multi-line CSV: no bucket columns found.");
 
-  if (bucketNames.length === 0) throw new Error("Multi-line CSV: no bucket columns found after Date. Headers: " + hdr.join(", "));
-
-  /* Parse data rows */
   const dates = [];
-  const series = {}; // bucketName → [values]
+  const series = {};
   bucketNames.forEach(b => { series[b] = []; });
 
   for (let r = hIdx + 1; r < rows.length; r++) {
@@ -900,7 +1027,6 @@ function parseMultiLineCSV(csvText) {
     const dateStr = (row[0] || "").trim();
     if (!dateStr) continue;
 
-    /* Parse date */
     let d;
     if (/^\d{4}-\d{2}-\d{2}/.test(dateStr)) {
       d = new Date(dateStr.split(" ")[0] + "T12:00:00");
@@ -914,7 +1040,6 @@ function parseMultiLineCSV(csvText) {
     if (!d || isNaN(d.getTime())) continue;
 
     dates.push(d.toLocaleDateString("en-US", { month: "short", day: "numeric" }));
-
     bucketNames.forEach((name, i) => {
       const raw = (row[i + 1] || "").trim().replace(/[$,]/g, "").replace(/^\((.+)\)$/, "-$1");
       const val = parseFloat(raw);
@@ -923,8 +1048,6 @@ function parseMultiLineCSV(csvText) {
   }
 
   if (dates.length === 0) throw new Error("Multi-line CSV: 0 valid date rows parsed.");
-
-  console.log("Multi-line CSV: " + dates.length + " dates, " + bucketNames.length + " buckets: " + bucketNames.join(", "));
   return { dates, bucketNames, series };
 }
 
@@ -1072,8 +1195,29 @@ async function boot() {
         '</span>';
     }
 
-    /* Multi-line bucket PnL chart */
-    if (multiLineText) {
+    /* Multi-line bucket PnL chart — compute from bets CSV (same source as equity) */
+    if (equityText) {
+      try {
+        const mlData = computeMultiLineFromBets(equityText);
+        renderMultiLineChart(mlData);
+      } catch (e) {
+        console.warn("Multi-line self-compute failed, trying legacy sheet:", e);
+        /* Fallback to legacy pre-computed sheet */
+        if (multiLineText) {
+          try {
+            const mlData = parseMultiLineCSV(multiLineText);
+            renderMultiLineChart(mlData);
+          } catch (e2) {
+            console.warn("Legacy multi-line also failed:", e2);
+            document.getElementById("mlMeta").innerHTML =
+              '<span style="color:var(--warn)">⚠ Bucket PnL: ' + e.message + '</span>';
+          }
+        } else {
+          document.getElementById("mlMeta").innerHTML =
+            '<span style="color:var(--warn)">⚠ Bucket PnL: ' + e.message + '</span>';
+        }
+      }
+    } else if (multiLineText) {
       try {
         const mlData = parseMultiLineCSV(multiLineText);
         renderMultiLineChart(mlData);
